polishing auth flow
